gradle build excluding test passing with java 17 and hive 2.3.9